namespaces/live.cloud-platform.service.justice.gov.uk/vcit-x-tmc-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "vcit-x-tmc-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "bold-ai-for-linked-data"
    cloud-platform.justice.gov.uk/application: "Victims Code x Track My Case prototype"
    cloud-platform.justice.gov.uk/owner: "bold-ai-for-linked-data: ai-for-linked-data@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/vcit-x-tmc"
    cloud-platform.justice.gov.uk/team-name: "bold-ai-for-linked-data"
    cloud-platform.justice.gov.uk/review-after: ""
